--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,19 @@
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.34.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
+    "google-auth-library": "^9.7.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
+    "nodemailer": "^6.9.13"
   }
 }
