--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.34.1"
+    "eslint-plugin-react": "^7.34.1",
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -23,6 +24,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.7.0",
+    "hbs": "^4.2.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
     "nodemailer": "^6.9.13"
