--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.0.3",
     "material-ui-popup-state": "^5.0.10",
     "prop-types": "^15.8.1",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-device-detect": "^2.2.3",
